--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@agent-smith/source",
   "type": "module",
+  "scripts": {
+    "check": "biome check --write"
+  },
   "devDependencies": {
     "@biomejs/biome": "2.2.6",
     "@types/bun": "latest"
