--- a/packages/example-vite-app/package.json
+++ b/packages/example-vite-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agent-smith/smith-app",
+  "name": "@agent-smith/example-vite-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
