--- a/biome.json
+++ b/biome.json
@@ -22,6 +22,7 @@
         "useArrayLiterals": "error",
         "useAsConstAssertion": "error",
         "useImportType": "error",
+        "useNodejsImportProtocol": "error",
         "useConsistentObjectDefinitions": {
           "level": "error",
           "options": {
